further fixes to employee list spacing issue.

--- a/app/assets/stylesheets/etc.less
+++ b/app/assets/stylesheets/etc.less
@@ -28,9 +28,11 @@ html {
     height: 4em;
   }
 
-  .list .employee-block {
-    min-height: 150px;
+  .employee {
+    height: 155px;
+  }
 
+  .list .employee-block {
     a:hover {
       text-decoration: none;
     }
